Have managed to fix the header and nav menu to work, with the header being ontop of the background image using the Z-index property. Following will attempt to position the divs that are commented out back in and correctly.

--- a/style.css
+++ b/style.css
@@ -2,31 +2,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* scroll-padding-top: 80px; */
 }
 
 body {
-    background-image: url(background-sky.jpg);
-}
-.contentbox {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-}
-
-.image-sky {
-    position: relative;
-    background-size: contain;
-    background-position: center;
-    height: 100vh;
-    background-repeat: no-repeat;
-    
+    margin: 0;
+    padding: 0;
+   
 }
 header{
     font-family: Alice;
     font-size: 30px;
     text-align: center;
-    color: white;
+     color: white; 
     background-color: #1c4587;
     width: 100%; 
     position: fixed; 
@@ -34,6 +22,8 @@ header{
     padding: 10px; 
     border-bottom: solid #c9daf8 10px;
     /* ^ Remember to use SOLID! (Spent 10 mins on this...) */
+    z-index: 1;
+    /* ^ This allows the header to appear above the background image from my understanding, you can use z-index with different numbers to have them layer upon eachother */
     
 }
 nav {
@@ -43,25 +33,53 @@ nav {
     align-items: center;
     font-size: 15px;
 }
+
+.image-sky {
+    background-image: url(background-sky.jpg);
+}
+.contentbox {
+    position: relative;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+
 a {
     color: white;
     text-decoration: none;
 }
-#mainpage {
+/* main {
     position: relative; 
     display: flex;
+    flex-direction: column;
     justify-content: center; 
     align-items: center; 
     height: 100vh; 
-}
-.synopsis {
+} */
+    /* background-repeat: no-repeat; */
+ 
+/* .synopsis {
+    position: relative;
+    bottom: 200px;
+    left: 3rem;
+    display: flex;
+    flex-direction: column;
+    gap: .9rem;
+} */
+
+        /* position: absolute;
+        bottom: 200px;
         display: flex;
-        justify-content: center;
         align-items: flex-end;
         background: #1c4587;
-        margin-top: 100px;
-        padding: 50px;
-        width: 550px;
-        height: 650px;
-        border: 20px solid black;
+        margin-top: 0px;
+        padding: 90px;
+        
+        width: 700px;
+        border: 20px solid black  */
+p {
+    color: white;
+}
+ul {
+    list-style-type: none;
 }
